2009-12-30  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/win/wgnuplib.h src/win/wgraph.c term/win.trm:
	Monochrome option of win terminal seems to have no effect.
	    set term win mono
	    plot x
	draws a red line. I think the timing of calling ReadGraphini() is not
	correct. This should be done only once on first entry before setting
	the terminal options.

2009-12-30  Thomas Sefzick <thse@users.sourceforge.net>

	* src/graph3d.c: Fix incorrect color assignment of contour lines when
	'set style increment user' is set.

2009-12-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot.c (get_data) src/graphics.c (plot_c_bars)
	src/tabulate.c (print_table) docs/gnuplot.doc:

	Allow an optional 6th column in CANDLESTICKS style that specifies the
	width of each individual candle.

2009-12-24  Thomas Sefzick <thse@users.sourceforge.net>

	* src/tabulate.c src/time.c:
	Support the "%s" format specifier to strftime as per the unix man page.
	If the output format string is exactly "%s" then 'output_number()' in
	'src/tabulate.c' returns the number of seconds since the beginning of
	the epoch as a number.  All other cases ("%s" in combination with any
	other character) are treated in 'time.c'.

2009-12-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/tabulate: Fix buffer overflow.

	* configure.in:  The cross-compilation patch causes a recursive 
	definition of CC in docs/Makefile.  I have attempted to fix this by
	revising the definition of CC_FOR_BUILD, but I don't know if this
	will break cross-compilation again.

2009-12-24  Robert Schwebel <r.schwebel@pengutronix.de>

	* configure.in docs/Makefile.in:
	When cross compiling gnuplot, build the documentation generation tools
	in docs/ with CC_FOR_BUILD (host compiler), not with the cross compiler.

2009-12-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/win/wgraph.c (drawgraph: W_line_type):  Change initial line
	template for LT_BACKGROUND to 0 (lt -1) rather than 1 (lt 0).